--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.5
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
