--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,16 +24,18 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.revisionadda12"
-    compileSdk flutter.compileSdkVersion
+    compileSdk 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        incremental = true
     }
 
     kotlinOptions {
         jvmTarget = '17'
+        freeCompilerArgs += ['-Xjvm-default=all']
     }
 
     sourceSets {
@@ -45,10 +47,11 @@ android {
         applicationId "com.example.revisionadda12"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -56,6 +59,8 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
