--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,18 @@ allprojects {
         google()
         mavenCentral()
     }
+    
+    tasks.withType(JavaCompile).configureEach {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+        options.compilerArgs.addAll(['-Xlint:-options'])
+    }
+    
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "17"
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
