--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,11 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.daemon=true
+org.gradle.parallel=false
+org.gradle.caching=false
+org.gradle.configureondemand=false
+org.gradle.workers.max=2
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
