--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,11 +1,13 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=192m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseSerialGC
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.daemon=true
+org.gradle.daemon=false
 org.gradle.parallel=false
 org.gradle.caching=false
 org.gradle.configureondemand=false
-org.gradle.workers.max=2
+org.gradle.workers.max=1
+org.gradle.java.installations.auto-detect=false
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+android.enableR8.fullMode=false
