--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=192m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseSerialGC
+#org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=128m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseSerialGC -XX:CompressedClassSpaceSize=64m
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.daemon=false
@@ -6,8 +6,10 @@ org.gradle.parallel=false
 org.gradle.caching=false
 org.gradle.configureondemand=false
 org.gradle.workers.max=1
-org.gradle.java.installations.auto-detect=false
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 android.enableR8.fullMode=false
+org.gradle.jvmargs=-Xmx2048m
+org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
+org.gradle.java.installations.auto-detect=false
