--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,10 +27,10 @@ android {
     compileSdk 34
     ndkVersion flutter.ndkVersion
 
+    // Java 17 features
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
-        incremental = true
     }
 
     kotlinOptions {
@@ -43,32 +43,53 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.revisionadda12"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
+        
+        // Enable vector drawable support
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
             minifyEnabled false
             shrinkResources false
-            // Disable R8 to reduce memory usage
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        release {
+            // Use debug config for now - replace with release config for production
+            signingConfig signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            
+            ndk {
+                debugSymbolLevel 'FULL'
+            }
+        }
     }
+    
+    // Enable view binding
+    buildFeatures {
+        viewBinding true
+    }
+}
+
+dependencies {
+    // Add Play Core library for dynamic feature delivery
+    implementation 'com.google.android.play:core:1.10.3'
+    implementation 'com.google.android.play:core-ktx:1.8.1'
+    
+    // Add multidex support
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
 flutter {
     source '../..'
 }
-
-dependencies {}
