--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,15 +1,13 @@
-#org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=128m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseSerialGC -XX:CompressedClassSpaceSize=64m
+# Project-wide Gradle settings
+org.gradle.jvmargs=-Xmx1536m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.daemon=false
-org.gradle.parallel=false
-org.gradle.caching=false
-org.gradle.configureondemand=false
-org.gradle.workers.max=1
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
+android.nonTransitiveRClass=true
 android.nonFinalResIds=false
-android.enableR8.fullMode=false
-org.gradle.jvmargs=-Xmx2048m
-org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
+android.enableR8.fullMode=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
 org.gradle.java.installations.auto-detect=false
