--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   timezone: ^0.9.4
   http: ^1.1.0
   dart_openai: ^5.0.1
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
