--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   http: ^1.1.0
   dart_openai: ^5.0.1
   share_plus: ^7.2.1
+  flutter_animate: ^4.2.0
+  google_fonts: ^6.1.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
