--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,14 +27,14 @@ android {
     compileSdk 34
     ndkVersion flutter.ndkVersion
 
-    // Java 17 features
+    // Java compatibility settings
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'  // Match Java version
         freeCompilerArgs += ['-Xjvm-default=all']
     }
 
