--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     // Add Play Core library for dynamic feature delivery
     implementation 'com.google.android.play:core:1.10.3'
     implementation 'com.google.android.play:core-ktx:1.8.1'
+    implementation 'androidx.browser:browser:1.5.0'
     
     // Add multidex support
     implementation 'androidx.multidex:multidex:2.0.1'
