--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,17 +55,17 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/study_icon.png"
+  image_path: "assets/icon/revisionadda12applogo.png"
   min_sdk_android: 21
   remove_alpha_ios: true
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/icon/study_icon.png"
+  adaptive_icon_foreground: "assets/icon/revisionadda12applogo.png"
   web:
     generate: true
-    image_path: "assets/icon/study_icon.png"
+    image_path: "assets/icon/revisionadda12applogo.png"
   windows:
     generate: true
-    image_path: "assets/icon/study_icon.png"
+    image_path: "assets/icon/revisionadda12applogo.png"
     icon_size: 48
 
 # For information on the generic Dart part of this file, see the
